recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double){
  current(steps)
  forward(length)
  tree(steps-1, length*shrink, abs(angle), shrink)
  tree(steps-1, length*shrink, -abs(angle), shrink)
  left(180)
  forward(length)
  right(180)
}